tests/chapter_14/invalid_types/multiply_pointers_2.c
int main(void)
{
    int *x = 0;
    return (int)(0 * x);
}